--- a/wwwroot/css/TermProject.css
+++ b/wwwroot/css/TermProject.css
@@ -1,2 +1,6 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+body {
+}
+.storyContent {
+    font-family: 'Indie Flower', cursive;
 }
