--- a/Views/ShortStory/Create.cshtml
+++ b/Views/ShortStory/Create.cshtml
@@ -11,10 +11,16 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <input type=hidden asp-for="Author" value="@ViewBag.Author" class="form-control" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <textarea asp-for="Content" class="form-control"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
