--- a/Views/ShortStory/Index.cshtml
+++ b/Views/ShortStory/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@model IEnumerable<TermProject.Models.ShortStory>
+﻿@model TermProject.Models.ShortStoryIndexViewModel
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Index"; }
 
-<h1>Index</h1>
+<h1>Short Stories</h1>
 
+<form asp-action="Index">
+    <input asp-for="SearchQuery" placeholder="Search by title">
+</form>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -13,42 +14,36 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Content)
+                Title
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Likes)
+                Likes
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Dislikes)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
+                Dislikes
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Likes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dislikes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a> |
-                <a asp-controller="Comments" asp-action="Index" asp-route-shortStoryID="@item.ID">Comments</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Stories)
+        {
+<tr>
+    <td>
+        <a asp-controller="Comments" asp-action="Index" asp-route-shortStoryID="@item.ID">
+            @Html.DisplayFor(modelItem => item.Title)
+        </a>
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Likes)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Dislikes)
+    </td>
+    <td>
+        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+    </td>
+</tr>}
     </tbody>
 </table>
